--- a/Deep Learning/activationFunction.ipynb
+++ b/Deep Learning/activationFunction.ipynb
@@ -175,35 +175,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d663a7b8-2bb8-43c8-9540-ebda5a052c31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def relu(x):\n",
+    "    return max(0,x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "33b8c26a-6e51-4d17-87c0-cac85cc7b959",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relu(-100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4c2f0ee5-01a8-4632-aa8a-ff710d477c3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relu(8)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fe79d51d-01bf-46ac-8b57-ebfa2c9a6818",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def leaky_relu(x):\n",
+    "    return max(0.1*x,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "947cdf6c-3d6b-40d0-9ba3-2822994d6df7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-10.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaky_relu(-100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "47c3fad5-e837-405e-9a22-46313a06c0ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leaky_relu(8)"
+   ]
   }
  ],
  "metadata": {
