--- a/Deep Learning/loss or cost function.ipynb
+++ b/Deep Learning/loss or cost function.ipynb
@@ -2,8 +2,308 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cd8c272e-b09e-4e18-b2e7-eae58caa2e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "y_predicted = np.array([1,1,0,0,1])\n",
+    "y_true = np.array([0.30,0.7,1,0,0.5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "19ef8e91-4cb6-4ac9-a331-52a9f6d29b87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mae(y_true, y_predicted):\n",
+    "    total_error = 0\n",
+    "    for yt, yp in zip(y_true, y_predicted):\n",
+    "        total_error += abs(yt - yp)\n",
+    "    print(\"Total error: \", total_error)\n",
+    "\n",
+    "    mae = total_error / len(y_true)\n",
+    "    print(\"MAE:\", mae)\n",
+    "    return mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6d978fb7-a445-4027-89d7-ce13f68ea41d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total error:  2.5\n",
+      "MAE: 0.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mae(y_true, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1bd8ac58-2399-474e-8023-763da028fce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.abs(y_predicted - y_true))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5b37fafa-2e45-42bd-a7ef-69b2fb532ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-13.81551056])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log([0.000001])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f993691d-86f0-4f0d-b78e-ab323685ad46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mae_np(y_predicted, y_true):\n",
+    "    return np.mean(np.abs(y_predicted-y_true))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "507839f9-ff01-44a6-b196-d3a63bc88aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mae_np(y_predicted, y_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4ea819e2-638a-4118-a4be-9dd13bbb8343",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13852/262464415.py:1: RuntimeWarning: divide by zero encountered in log\n",
+      "  np.log([0])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-inf])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log([0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5f17b65c-cf8b-4eba-bade-a2476439548f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = 1e-15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a23cc4d0-84db-41d5-a95a-4b9346c083dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-34.53877639])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log([1e-15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0add0e2c-db51-4d66-8b20-dd60fc6e0e39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 0, 1])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9483c0a1-de64-492b-bbbe-754dcd9240aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1e-15, 1e-15, 1]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted_new = [max(i,epsilon) for i in y_predicted]\n",
+    "y_predicted_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "65c64ce4-737d-4a56-a7cc-873730ee67e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.999999999999999"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-epsilon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8e216cca-048f-4402-b24f-33d47c4d40c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.999999999999999, 0.999999999999999, 1e-15, 1e-15, 0.999999999999999]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted_new = [min(i,1-epsilon) for i in y_predicted_new]\n",
+    "y_predicted_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "858d3844-d89c-40d2-9ea6-60f3e0c02cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predicted_new = np.array(y_predicted_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81c67185-ddf1-4db5-8d4b-888fcba23f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00abb9fb-0206-4d7f-9d94-0759403f469f",
    "metadata": {},
    "outputs": [],
    "source": []
