Disease Detection Initial Commit

--- a/Deep Learning/loss or cost function.ipynb
+++ b/Deep Learning/loss or cost function.ipynb
@@ -294,8 +294,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "81c67185-ddf1-4db5-8d4b-888fcba23f2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-9.99200722e-16, -9.99200722e-16, -3.45387764e+01, -3.45387764e+01,\n",
+       "       -9.99200722e-16])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(y_predicted_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "00abb9fb-0206-4d7f-9d94-0759403f469f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.2696280766844"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-np.mean(y_true*np.log(y_predicted_new)+(1-y_true)*np.log(1-y_predicted_new))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fe5b7070-989a-479b-8a79-94d7290e9471",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_loss(y_true, y_predicted):\n",
+    "    y_predicted_new = [max(i,epsilon) for i in y_predicted]\n",
+    "    y_predicted_new = [min(i,1-epsilon) for i in y_predicted_new]\n",
+    "    y_predicted_new = np.array(y_predicted_new)\n",
+    "    return -np.mean(y_true*np.log(y_predicted_new)+(1-y_true)*np.log(1-y_predicted_new))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "659b6af7-0469-4b5e-adfc-5543cd9e51de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.2696280766844"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_loss(y_true, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d39a762-bb6b-4a7b-941f-38c2d241632d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00abb9fb-0206-4d7f-9d94-0759403f469f",
+   "id": "f2d7baa7-9052-43d5-ba65-e0401509c4a8",
    "metadata": {},
    "outputs": [],
    "source": []
