--- a/python/Revise/List Comprehension.ipynb
+++ b/python/Revise/List Comprehension.ipynb
@@ -61,13 +61,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4c374784-ffaa-4aa7-9e3d-41db8846a4a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "matrix ="
+    "matrix =[[1,2,3],[4,5,6],[7,8,9]]\n",
+    "flattened = [num for row in matrix for num in row]\n",
+    "print(flattened)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "abeac5b9-74ea-4321-8b0d-c97c858a801b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hello': 5, 'world': 5, 'python': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "words_length = {word: len(word) for word in ['hello', 'world', 'python']}\n",
+    "print(words_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8532c09a-490c-4ef9-81f4-be0babcd7a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_length = {len(words) for words in ['hello', 'world', 'python', 'code']}\n",
+    "print(unique_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fcd8ac3-a469-461a-bb7b-e8d27724f485",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
